# snake-game

./: CMakeLists.txt  Readme.md
include/: game.hpp  grid.hpp  gridCell.hpp  states.hpp
src/: game.cpp  grid.cpp  gridCell.cpp  main.cpp
